--- a/plugin.xml
+++ b/plugin.xml
@@ -11,7 +11,7 @@
     <platform name="ios">
         <!-- Деклариране на функционалност -->
         <config-file parent="/*" target="config.xml">
-            <feature name="facebook-login">
+            <feature name="FacebookLogin">
                 <param name="ios-package" value="FacebookLogin" />
             </feature>
         </config-file>
@@ -23,7 +23,7 @@
     <platform name="android">
         <!-- Деклариране на функционалност -->
         <config-file parent="/*" target="res/xml/config.xml">
-            <feature name="facebook-login">
+            <feature name="FacebookLogin">
                 <param name="android-package" value="com.softmex.facebooklogin.FacebookLogin" />
             </feature>
         </config-file>
